o flee check to looting added - Elanoron
o added a stand queue check - Elanoron
o added a got line for concussion from suckerpunch - Elanoron
o added greatsword to mtw.weapons table - Elanoron
o changed the way divinecommand is cured - Elanoron
o added ?import and !import <profile> to fetch saved options from other matawa profiles - Savil
o added a conversion module -Savil
o added a 'reconnect' alias -Savil
o the system will now tell if there is a new version available -Savil
o Added a repeat alias '#<number> <action>' will do <action> <number> times -Savil

v10.0
o Added 'ftease' and 'fjerk' to customize jerking/teasing times -Savil
o Added '?search' to search for text in the code -Savil
o Added soullink defense -Savil
o Changed threaten alias: thrn -Savil
o Split the tward toggle: tward is now only for warding, trog for lightball/lodestone, twall for icewall, tlit for liturgy. -Savil
o Added threaten (with its toggle) to the soldier bashing function. -Savil
o Updated bashing table -Savil, Elanoron
o Rewrote the gathering module, added an alias 'h X Y' that works like 'q X Y', to select what to mine. -Savil
o Changed aliases for night's horror and scarlet horror due to conflict. Now it's nhor and shor. -Savil
o Added Laurie's refrain in the bashing function for bards -Elanoron
o *huge* add of triggers for thana/bloodpriest -Elanoron 
o Added some aliases to have SWHO<number>, SHELP<number> just like SCT<number> -Savil
o update with grip in the bashing function -Elanoron
o Added a GUI. '?gui' to have all the functions. It's missing some decorations, will do them over time (feel free to provide though!) -Savil
o Squished some fishing/bashing system bugs -Elanoron,Savil
o Added the 'bih' toggle to stop printing the IH output when bashing -Savil
o Added a 'tdp' toggle to stop printing the prompt -Savil

V11
o Mega Update by Elanoron/Rosalia:
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 
o 