@@ -53,6 +53,7 @@ fleching = false,
 cantoing = false,
 requieming = false,
 savaging = false,
+bloodsensing = false,
 lashing = false,
 mandate = false,
 shadowmending = true,
